Changelog of nVidia's AtlasCreationTool fork

050627: Removed dependency on D3D sample framework.