@@ -9,5 +9,7 @@ Currently the fork is based on 2.0 (1.0.0826.1700) version.
 
 Changes are:
 
+* Supports non-pow-2 input textures.
+
 * Removed dependency on D3D sample framework. Now it's really just a simple
   command line application.
